<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>irp_sen_msgs</name>
  <version>1.2.0</version>
  <description>ROS 2 message definitions for IRAP.</description>
  <maintainer email="irap@kaist.ac.kr">IRAP</maintainer>
  <author>Jinyong Jeong</author>
  <license>BSD</license>

  <url type="website">http://irap.kaist.ac.kr</url>
  <url type="repository">https://github.com/irapkaist/irp_msgs</url>
  <url type="bugtracker">https://github.com/irapkaist/irp_msgs/issues</url>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  
  <member_of_group>rosidl_interface_packages</member_of_group>

  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
